--- a/src/components/PocketItem/PocketItem.module.css
+++ b/src/components/PocketItem/PocketItem.module.css
@@ -4,13 +4,14 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 15px;
-  cursor: pointer;
   background-color: #222;
   color: #ddd;
+  text-decoration: none;
 }
 .Pocket:hover {
   background-color: #000;
   color: #fff;
+  text-decoration: none;
 }
 
 .Currency {
