--- a/src/containers/Pocket/Pocket.module.css
+++ b/src/containers/Pocket/Pocket.module.css
@@ -49,49 +49,7 @@
   text-decoration: none;
 }
 
-.PocketHistory {
+.PocketBottom {
   grid-area: pocket_history;
   padding: 25px;
-}
-
-.PocketHistory h2 {
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.HistoryListItem {
-  display: flex;
-  flex-flow: row;
-  align-items: center;
-  justify-content: space-between;
-  padding: 25px 0 0;
-}
-
-.HistoryListItemIcon {
-  width: 50px;
-  height: 50px;
-  border-radius: 50px;
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  font-size: 25px;
-  font-weight: bold;
-}
-
-.HistoryListItemIcon span {
-  font-size: 16px;
-}
-
-.HistoryListItemIconIn {
-  background-color: #48BB78;
-}
-
-.HistoryListItemIconOut {
-  background-color: #F56565;
-}
-
-.HistoryListItemMessage {
-  font-size: 18px;
-  padding: 0 25px;
-  width: calc(100% - 50px - 50px - 25px - 25px);
 }
