--- a/src/containers/Pocket/Pocket.module.css
+++ b/src/containers/Pocket/Pocket.module.css
@@ -14,20 +14,31 @@
   align-items: center;
   flex-flow: row;
   grid-area: pocket_header;
-  background: rgb(2,0,36);
-  background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(3,19,83,1) 50%, rgba(51,0,88,1) 100%);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(45deg,
+                rgb(2, 0, 36) 0%,
+                rgb(3, 19, 83) 50%,
+                rgb(51, 0, 88) 100%);
 }
 
 .PocketTo {
   grid-area: unset;
   margin: -25px;
   height: 200px;
+  background: linear-gradient(45deg,
+                rgb(51, 0, 88) 0%,
+                rgb(3, 19, 83) 50%,
+                rgb(2, 0, 36) 100%);
 }
 
 .Amount {
   color: #fff;
   font-size: 50px;
 }
+.AmountHalf {
+  width: 50%;
+}
+
 .Amount span {
   font-size: 25px;
   margin-left: 15px;
@@ -117,4 +128,11 @@
 .PocketToExchange footer {
   grid-area: subpocket_rate;
   text-align: right;
+}
+
+.ExchangeUI {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 25px 0 0;
 }
